# SignalDesk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_digest.sh  signaldesk.service  signaldesk.timer
src/: __init__.py  bot.py  cli.py  config.py  db.py  digest.py  ingestor.py  main.py  models.py  notifier.py  triage.py
tests/: test_bot.py  test_cli.py  test_db.py  test_digest.py  test_ingestor.py  test_integration.py  test_models.py  test_notifier.py  test_triage.py
